--- a/typechain/tsconfig.json
+++ b/typechain/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "outDir": "build", // js 파일이 생성될 디렉토리
     "target": "ES6", // 컴파일될 js 버전 설정 -- ex6가 이상적
+    "lib": ["ES6", "DOM"], // 합쳐진 라이브러리의 정의 파일을 특정해주는 역할 = 자바스크립트 어떤 버전이 환경에서 사용되는지 정의해줌, 브라우저 위에서 실행한다고 써줌 DOM -- 이제 타입스크립트에서 document를 쓰면, 해당 메소드들을 보여줌 = 자동완성을 제공함  -- 이거 안하면 document 를 인식을 못함 - 그냥 백엔드인줄 암
   }
 }
